# pdf_tool

./: .gitignore  Dockerfile  LICENSE  README.md  Welcome.py  app.py  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
pages/: 1_Convert_scanned_PDF.py  1_Split_PDF.py  2_Merge_PDF.py  3_Extraction.py
src/config/: config.py
src/pages/: split_pdf.py  welcome.py
src/services/: pdf_services.py
src/utils/: scripts.py
