[tool.poetry]
name = "pdf-tool"
version = "0.1.0"
description = "One stop solution for PDF processing"
authors = ["Sumantha NTS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.36.0"
loguru = "^0.7.2"
ocrmypdf = "^16.4.0"
pytesseract = "^0.3.10"
pypdf2 = "^3.0.1"
streamlit-pdf-viewer = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
